--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,9 +6,12 @@ environment:
   sdk: ">=3.1.2 <4.0.0"
 dependencies:
   awesome_drawer_bar: ^1.2.0
+  dio: ^5.3.3
   flutter:
     sdk: flutter
   flutter_advanced_drawer: ^1.3.5
+  flutter_spinkit: ^5.2.0
+  material_segmented_control: ^5.0.0
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
@@ -33,14 +36,21 @@ flutter:
   fonts:
     - family: Amiri
       fonts:
-        - asset: assets/fonts/AmiriQuran-Regular.ttf
+        - asset: assets/fonts/Amiri-Regular.ttf
+          style: normal
+        - asset: assets/fonts/Amiri-Bold.ttf
+          weight: 700
     - family: Poppins
       fonts:
         - asset: assets/fonts/Poppins-Regular.ttf
+          style: normal
         - asset: assets/fonts/Poppins-Bold.ttf
-          weight: 700
+          weight: 800
         - asset: assets/fonts/Poppins-Thin.ttf
           weight: 100
+        - asset: assets/fonts/Poppins-SemiBold.ttf
+          weight: 600
+
 #   - family: Trajan Pro
 #     fonts:
 #       - asset: fonts/TrajanPro.ttf
