--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ version: 0.1.0
 environment:
   sdk: ">=3.1.2 <4.0.0"
 dependencies:
+  audioplayers: ^5.2.0
   awesome_drawer_bar: ^1.2.0
   dio: ^5.3.3
   flutter:
